testcases/phase1/check05dxit-FuncDeclParams2.rc
int i;
float f;
bool b;

function : void foo( int & ir, bool & br) { }

function : void main()
{
	foo(f, i); // error: float not equivalent to int, 
			   //        int not equivalent to bool
			   
	foo(b, f); // error: bool not equivalent to int, 
			   //        float not equivalent to bool
}